[gd_scene load_steps=19 format=2]

[ext_resource path="res://Frog.gd" type="Script" id=1]
[ext_resource path="res://incorrect:).tres" type="SpriteFrames" id=2]
[ext_resource path="res://MainCamera.gd" type="Script" id=3]
[ext_resource path="res://MazeGrid.gd" type="Script" id=4]
[ext_resource path="res://TileSet.tres" type="TileSet" id=5]
[ext_resource path="res://lights.png" type="Texture" id=6]
[ext_resource path="res://default_env.tres" type="Environment" id=7]
[ext_resource path="res://floating_lights.png" type="Texture" id=8]
[ext_resource path="res://FloatingLights.gd" type="Script" id=9]
[ext_resource path="res://glitching.tres" type="Material" id=10]
[ext_resource path="res://ErrRor2.gdshader" type="Shader" id=11]
[ext_resource path="res://WorldEnvironment.gd" type="Script" id=12]
[ext_resource path="res://Space.tres" type="SpriteFrames" id=13]
[ext_resource path="res://Stars.gd" type="Script" id=14]

[sub_resource type="Shader" id=14]

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 14 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 6.5 )

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 11 )
shader_param/red_displacement = 1.0
shader_param/green_displacement = -0.5
shader_param/blue_displacement = -0.5
shader_param/ghost = 1.0
shader_param/intensity = 1.0
shader_param/scan_effect = 1.0
shader_param/distortion_effect = 1.0
shader_param/negative_effect = 1.0

[node name="Node2D" type="Node2D"]
position = Vector2( 228, 211 )

[node name="MazeGrid" type="TileMap" parent="."]
material = SubResource( 13 )
z_index = -1
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 4 )

[node name="Frog" type="KinematicBody2D" parent="."]
position = Vector2( 7, 8 )
script = ExtResource( 1 )

[node name="Frog_Collision" type="CollisionShape2D" parent="Frog"]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="Frog_Sprite" type="AnimatedSprite" parent="Frog"]
material = ExtResource( 10 )
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 2 )
frame = 2
speed_scale = 2.0
playing = true

[node name="Light2D" type="Light2D" parent="Frog"]
texture = ExtResource( 6 )
color = Color( 1, 0.984314, 0.827451, 1 )
energy = 2.0
shadow_enabled = true

[node name="MainCamera" type="Camera2D" parent="."]
z_index = 10
current = true
zoom = Vector2( 0.2, 0.2 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="MainCamera"]
modulate = Color( 1, 1, 1, 0 )
light_mask = 0
rotation = 0.872665
scale = Vector2( 8, 8 )
z_index = -2
z_as_relative = false
frames = ExtResource( 13 )
frame = 1
playing = true
script = ExtResource( 14 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 7 )
script = ExtResource( 12 )

[node name="FloatingLights" type="Sprite" parent="."]
material = SubResource( 9 )
position = Vector2( 25, 8 )
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Light2D" type="Light2D" parent="FloatingLights"]
texture = ExtResource( 6 )
energy = 2.0
mode = 1
shadow_enabled = true
